--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "babel-plugin-add-module-exports": "0.1.2",
     "babel-preset-es2015": "6.3.13",
     "chai": "3.4.1",
+    "chai-as-promised": "^5.3.0",
     "mocha": "2.3.4",
     "webpack": "1.12.9",
     "yargs": "3.32.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/partials-music/nlp-syllables-async.git"
+    "url": "https://github.com/partials-dev/nlp-syllables-async.git"
   },
   "keywords": [
     "syllables",
