--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "chai": "3.4.1",
     "chai-as-promised": "^5.3.0",
     "mocha": "2.3.4",
+    "mocha-sinon": "^1.1.5",
+    "sinon": "^1.17.5",
+    "sinon-chai": "^2.8.0",
     "webpack": "1.12.9",
     "yargs": "3.32.0"
   },
